--- a/scss/base/_banner.scss
+++ b/scss/base/_banner.scss
@@ -1,7 +1,7 @@
 // Banner
 #banner {
     width: 100%;
-    height: 550px;
+    height: 550px; //could be dynamic
 }
 
 .banner-item {
@@ -22,19 +22,19 @@
     }    
     h1, h2 {
         font-weight: 600;
-        letter-spacing: 0.05rem;
+        letter-spacing: 0.03rem;
     }
     h1 {
-        margin-top: 1.35em;
+        margin-top: 87px;
         width: 85%;
-        font-size: 3.2rem;
-        line-height: 4rem;
+        font-size: 64px;
+        line-height: 80px;
     }
     h2 {
         width: 75%;
-        font-size: 1.3rem;
-        line-height: 2rem;
-        margin-top: -1.7rem;
+        font-size: 26px;
+        line-height: 40px;
+        margin-top: -31px;
     }
 
     @media (max-width: $screen-large){
@@ -47,18 +47,19 @@
             align-items: center;
         }
         h1, h2 {
-            width: 100%;
             text-align: center;
         }
         h1 {
-            margin-top: 6.5rem;
-            font-size: 2rem;
-            line-height: 1.25em;
+            width: 100%;
+            margin-top: 131px;
+            font-size: 40px;
+            line-height: 48px;
         }
         h2 {
-            margin-top: -0.5em;
-            font-size: 1rem;
-            line-height: 1.5em;
+            width: 90%;
+            margin-top: -15px;
+            font-size: 20px;
+            line-height: 28px;
             padding-left: 2em;
             padding-right: 2em;
         }
@@ -73,32 +74,34 @@
         
     .banner-item-button {
         @include buttonstyles($color-accent, true);
+        font-size: 20px;
+        letter-spacing: 0.03rem;
         margin-left: 0;
+        margin-top: 8px;
+        padding: 5px 19px 5px 21px;
     }
 }
-
 // Banner switching dots
 .banner-dots {
     position: absolute;
-    top: 685px;
+    top: 687px;
     left: 50%;
     transform: translateX(-50%);
     
     display: flex;
     justify-content: center;
-    gap: 7px;
+    gap: 6px;
     
-    font-size: larger;
+    font-size: 25px;
     text-align: center;
 
     @media (max-width: $screen-medium){
-        top: 590px;
+        top: 588px;
     }
     @media (max-width: $screen-small){
-        top: 650px;
+        top: 648px;
     }
 }
-
 .banner-dot {
     width: 1em;
     height: 1em;
