--- a/scss/base/_services.scss
+++ b/scss/base/_services.scss
@@ -31,19 +31,22 @@
     border-radius: 15px;
     box-shadow: 0px 0px 50px lighten($color-button-grey, 30%);
 
-    h3, p {
-        margin: 10px;
-    }
     h3 {
+        font-size: 21px;
         font-weight: 400;
         color: $colour-heading;
+        margin-top: 10px;
     }
     p {
-        font-weight: 300;
-        font-size: 0.8rem;
+        margin-top: 0;
+        font-weight: 350;
+        font-size: 13px;
+        line-height: 22px;
     }
 
     .content-item__icon {
+        margin-top: 10px;
+
         font-size: 32px;
         width: 64px;
         height: 64px;
@@ -97,6 +100,11 @@
         @media (min-width: $screen-medium) {
             transform: translateY(-10px);
         }
+    }
+
+    button {
+        font-size: 18px;
+        height: 30px;
     }
 
 }
