--- a/scss/base/_slideshow.scss
+++ b/scss/base/_slideshow.scss
@@ -7,8 +7,8 @@
     // 100% overflows
     width: 98%;
 
-    margin-left: 20px;
-    margin-right: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 
     // Make this a block for the JS carousel
     display: flex;
@@ -48,7 +48,6 @@
         background-color: $color-primary;
         color: $white;
         
-        // Long delay before hiding
         transition: 
             opacity 0.3s ease-in-out,
             visibility 0s linear 0.8s;
@@ -61,7 +60,7 @@
         bottom: 100%;
         left: 0;
         width: 100%;
-        height: 30px; // Same as margin-bottom of banner
+        height: 30px;
     }
 
     .slideshow-submenu-content {
