--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -6,12 +6,13 @@
     padding-right: 15px;
 
     @media (min-width: $screen-small) {
-        width: 750px;
+        width: calc($screen-small - 20px);
     }
     @media (min-width: $screen-medium) {
-        width: 970px;
+        width: calc($screen-medium - 20px);
     }
     @media (min-width: $screen-large) {
-        width: 1200px;
+        width: calc($screen-large - 60px);
     }
+    
 }
