--- a/scss/utilities/_vars.scss
+++ b/scss/utilities/_vars.scss
@@ -1,6 +1,7 @@
 // GLOBAL VARIABLES USED BY THE WHOLE PROJECT
 
 // MEDIA/SCREEN SIZE
+$screen-mobile: 466px;
 $screen-small: 767px;
 $screen-medium-header: 768px;
 $screen-medium: 991px;
