--- a/scss/base/_banner.scss
+++ b/scss/base/_banner.scss
@@ -2,6 +2,10 @@
 #banner {
     width: 100%;
     height: 550px; //could be dynamic
+
+    @media (max-width: 400px){
+        margin-bottom: 20%;
+    }
 }
 
 .banner-item {
@@ -64,6 +68,13 @@
             padding-right: 2em;
         }
     }
+    @media (max-width: $screen-small){
+        height: auto;
+        h1 {
+            margin-top: 100px;
+        }
+    }
+
 }
 
 // Set the banner's specific stuff here
@@ -79,6 +90,13 @@
         margin-left: 0;
         margin-top: 8px;
         padding: 5px 19px 5px 21px;
+
+        @media (max-width: $screen-small){
+            margin-bottom: 25%;
+        }
+        @media (max-width: $screen-mobile){
+            margin-bottom: 50px;
+        }
     }
 }
 // Banner switching dots
@@ -100,6 +118,9 @@
     }
     @media (max-width: $screen-small){
         top: 648px;
+    }
+    @media (max-width: $screen-mobile){
+        top: 200px;
     }
 }
 .banner-dot {
