--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -71,7 +71,6 @@ aside {
         flex-direction: column;
         align-items: center;
         margin-bottom: -15px;
-        // flex-grow: 1;
     
         padding-top: 1em;
         padding-bottom: 1em;
@@ -123,7 +122,7 @@ aside {
 
     
     @media (min-width: $screen-medium) {
-        #button-contact, .nav-item {
+        #button-contact {
             display: none;
         }
     }
