--- a/scss/base/_main.scss
+++ b/scss/base/_main.scss
@@ -15,6 +15,7 @@ main {
         font-weight: 400;
         color: $colour-heading;
         font-size: 42px;
+        letter-spacing: 0.5px;
     }
     h2 {
         font-weight: 600;
@@ -23,7 +24,7 @@ main {
         &::after {
             font-family: icomoon;
             content: $icon-code-arrow;
-            font-size: 26px;
+            font-size: 34px;
             margin-left: 10px;
         }
         &:hover {
