--- a/scss/base/_services.scss
+++ b/scss/base/_services.scss
@@ -9,7 +9,10 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-    gap: 20px;
+    column-gap: 20px;
+    row-gap: 30px;
+
+    margin-top: 62px;
 
     @media (max-width: $screen-medium) {
         flex-direction: column;
@@ -23,6 +26,7 @@
     justify-content: space-between;
     text-align: center;
     
+
     height: 100%;
     padding: 20px;
     transition: all 0.4s ease-in-out;
@@ -31,13 +35,16 @@
     border-radius: 15px;
     box-shadow: 0px 0px 50px lighten($color-button-grey, 30%);
 
+
     h3 {
+        pointer-events: none;
         font-size: 21px;
         font-weight: 400;
         color: $colour-heading;
         margin-top: 10px;
     }
     p {
+        pointer-events: none;
         margin-top: 0;
         font-weight: 350;
         font-size: 13px;
@@ -59,7 +66,7 @@
     // Color variations
     &#sof { 
         .content-item__icon{ color: $white; background-color: $colour-sof; } 
-        button { @include buttonstyles($colour-sof); }
+        button { @include buttonstyles(#f7b322); }
     }
     &#sup { 
         .content-item__icon{ color: $white; background-color: $colour-sup; } 
@@ -86,8 +93,6 @@
         button { @include buttonstyles($colour-dev); }
     }
 
-
-
     &:hover {
         &#sof{ @include hoverColourChange($colour-sof); }
         &#sup{ @include hoverColourChange($colour-sup); }
@@ -102,9 +107,12 @@
         }
     }
 
+    //Make the buttons look like the NM ones
     button {
-        font-size: 18px;
-        height: 30px;
+        font-size: 18px !important;
+        height: 47px !important;
+        width: 130px !important;
+        padding: 0 !important;
     }
 
 }
