--- a/scss/layout/_header-Deep-Thought-safeBackup-0001.scss
+++ b/scss/layout/_header-Deep-Thought-safeBackup-0001.scss
@@ -223,6 +223,24 @@ header {
         flex-grow: 1;
         justify-content: space-around;
 
+                    
+        // Setup arrow
+        &:after {
+            content: "";
+            display: none;
+            position: absolute;
+            left: 50%;
+            bottom: -35px;
+            transform: translateX(-50%);
+
+            width: 0;
+            height: 0;
+            border-left: 84px solid transparent;
+            border-right: 84px solid transparent;
+            border-top: 35px solid #00000036;
+        }
+
+
         // Nav item text
         a {
             display: flex;
@@ -323,29 +341,11 @@ header {
         &#sec::before { content: $icon-code-shield; }
         &#cou::before { content: $icon-code-mortar; }
 
-        // Setup arrow
-        &:after {
-            content: "";
-            display: none;
-            position: absolute;
-            left: 50%;
-            bottom: -35px;
-            transform: translateX(-50%);
 
-            border-left: 84px solid transparent;
-            border-right: 84px solid transparent;
-            border-top: 35px solid #00000036;
-        }
-        // Hard code the arrow positions
-        &#sof::after { left: 200px; }
-        &#sup::after { left: 370px; }
-        &#mar::after { left: 535px; }
-        &#ser::after { left: 700px; }
-        &#des::after { left: 870px; }
-        &#sec::after { left: 1035px; }
-        &#cou::after { left: 1205px; }
     }
 }
+
+
 
 @media (max-width: $screen-large){
     .main-heading {
@@ -372,12 +372,10 @@ header {
     .main-nav {
         padding-bottom: 115px;
         .nav-item {
-            height: 115px;
-
             &::after {
                 bottom: -51px;
-                border-left-width: 67px;
-                border-right-width: 67px;
+                border-left-width: 70px;
+                border-right-width: 70px;
             }
             a {
                 text-wrap: wrap;
@@ -387,14 +385,6 @@ header {
             .submenu-banner {
                 top: 225px;
             }
-
-            &#sof::after { left: 202px; }
-            &#sup::after { left: 337px; }
-            &#mar::after { left: 471px; }
-            &#ser::after { left: 606px; }
-            &#des::after { left: 741px; }
-            &#sec::after { left: 876px; }
-            &#cou::after { left: 1011px; }
         }
 
     }
