--- a/scss/utilities/_mixins-Deep-Thought-safeBackup-0001.scss
+++ b/scss/utilities/_mixins-Deep-Thought-safeBackup-0001.scss
@@ -64,7 +64,7 @@
     background-color: $colour;
     h3, p, .content-item__icon {
         color: $white;
-        transition: 0.4s ease-in-out;
+        // transition: 0.4s ease-in-out;
     }
     .content-item__icon {
         background-color: $white;
@@ -72,14 +72,14 @@
         height: 65px;
         color: $colour;
         border-radius: 100%;
-        transition: 0.4s ease-in-out;
+        // transition: 0.4s ease-in-out;
     }
     button {
         color: $colour;
         background-color: $white;
-        transition: 0.4s ease-in-out;
+        // transition: 0.4s ease-in-out;
     }
-    transition: 0.4s ease-in-out;
+    // transition: 0.4s ease-in-out;
 }
 
 @mixin colournewsarticle($colour) {
