--- a/scss/base/_banner.scss
+++ b/scss/base/_banner.scss
@@ -81,8 +81,12 @@
 .active-banner {
     // Background
     background-image: linear-gradient(270deg, rgba(0, 0, 0, 0) 25%, rgb(0, 0, 0)),
-    url("https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-YLei.webp");  
-        
+    url("https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-YLei.webp");
+
+    @media (max-width: $screen-medium) {
+        background-image: linear-gradient(rgba($black, 0.5)),
+        url("https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-YLei.webp");
+    }
     .banner-item-button {
         @include buttonstyles($color-accent, true);
         font-size: 20px;
