--- a/scss/base/_main.scss
+++ b/scss/base/_main.scss
@@ -25,6 +25,7 @@ main {
             font-family: icomoon;
             content: $icon-code-arrow;
             font-size: 34px;
+            font-weight: 400;
             margin-left: 10px;
         }
         &:hover {
