--- a/scss/utilities/_icons.scss
+++ b/scss/utilities/_icons.scss
@@ -1,15 +1,25 @@
 // ICON CODES
-$icon-code-arrow: "\ea3c";
-$icon-code-home: "\e900";
+$icon-code-arrow: "\e905";
 
 // MENU ICON CODES
 $icon-code-laptop: "\e903";
 $icon-code-display: "\e956";
-$icon-code-bars: "\e901";
-$icon-code-phone: "\e942";
-$icon-code-code: "\ea80";
-$icon-code-shield: "\e905";
-$icon-code-mortar: "\e904";
+$icon-code-bars: "\e909";
+$icon-code-phone: "\e906";
+$icon-code-code: "\f121";
+$icon-code-shield: "\e904";
+$icon-code-mortar: "\e907";
+
+// BUTTON ICON CODES
+$icon-code-contact: "\e900";
+$icon-code-support: "\e901";
+$icon-code-search: "\e902";
+
+// BUTTON SOCIAL ICONS
+$icon-code-facebook: "\e90f";
+$icon-code-linkedin: "\f08c";
+$icon-code-twitter: "\e910";
+$icon-code-instagram: "\f16d";
 
 // SUBMENU ICON CODES
 $submenu-icons: (
