--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -53,7 +53,8 @@ header {
         margin: 0;
         font-size: 18px;
         &::before {
-            content: "\e941";
+            font-family: icomoon;
+            content: $icon-code-support;
         }
     }
     #button-contact {
@@ -61,17 +62,18 @@ header {
         margin: 0;
         font-size: 18px;
         &::before {
-            content: "\e945";
+            content: $icon-code-contact;
         }
     }
 
     #searchbox {
-        width: 215px;
+        width: 220px;
         padding-left: 10px;
         flex-grow: 2;
         height: 56px;
         transition: 0.25s;
         border: 1px solid #cccccc;
+        box-shadow: inset 0 1px lighten($color-button-grey, 30%);
         &::placeholder {
             position: relative;
             font-size: 15px;
@@ -100,25 +102,28 @@ header {
             // Overlay icon on top of the button
             position: absolute;
             top: 50%;
+            left: -2px;
             transform: translateY(-50%);
             pointer-events: none;
+            font-size: 29px;
         }
     }
 
+    // Menu button
     #button-nav {
-        @include buttonstyles(rgba($colour-primary-dark, 0.95));
-        width: 50px;
+        @include buttonstyles(#333645);
+        width: 52px;
         height: 56px;
         margin: 0;
-        font-size: 32px;
+        padding: 0;
 
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        
-        .nav-icon {
+        span {
             display: block;
-            margin: auto 0;
+            position: relative;
+            top: -2px;
+            width: 33px;
+            border-bottom: 4px solid $white;
+            margin: 6px auto 0 auto;
         }
     } 
 
@@ -126,18 +131,19 @@ header {
     // Apply these styles after the buttons for DRY
     #button-support, #button-contact {
         height: 56px;
-        width: 130px;
         &::before {
             font-family: icomoon;
             padding-right: 6px;
         }
     }
     #button-support {
+        width: 132px;
         &::before {
             content: "\e941";
         }
     }
     #button-contact {
+        width: 139px;
         &::before {
             content: "\e945";
         }
@@ -232,8 +238,7 @@ header {
             text-decoration: none;
             font-size: 18px;
             letter-spacing: 0.025rem;
-            margin-bottom: 1px;
-
+            margin-bottom: 1px;       
             text-wrap: nowrap;
 
             small {
@@ -246,13 +251,9 @@ header {
 
         // Submenu popup
         &:hover {
-            &:after {
-                display: block;
-            }
+            &:after,
             .submenu-banner {
                 display: block;
-                opacity: 1;
-                visibility: visible;
             }
         }
         // Popup submenu
