--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,5 +1,3 @@
-// @import "./../../assets/iconmoon/style.css";
-
 header {
     position: sticky;
     padding-bottom: 209px;
@@ -50,21 +48,41 @@ header {
     }
     #button-support {
         @include buttonstyles($color-button-support);
+        width: 132px;
         margin: 0;
+        padding-left: 20.5px;
         font-size: 18px;
+        letter-spacing: 0.4px;
         &::before {
-            font-family: icomoon;
             content: $icon-code-support;
         }
     }
     #button-contact {
         @include buttonstyles($color-button-grey);
+        width: 139px;
         margin: 0;
         font-size: 18px;
+        letter-spacing: 0.4px;
         &::before {
             content: $icon-code-contact;
         }
     }
+    // Common styles for support and contact buttons
+    #button-support, #button-contact {
+        height: 56px;
+        padding-bottom: 10px;
+        &::before {
+            font-family: icomoon;
+            padding-right: 6px;
+
+            position: relative;
+            top: 4px;
+            right: 4px;
+            margin-right: -5px;
+            font-size: 23px;
+        }
+    }
+
 
     #searchbox {
         width: 220px;
@@ -77,6 +95,7 @@ header {
         &::placeholder {
             position: relative;
             font-size: 15px;
+            letter-spacing: -0.5px;
             opacity: 0.75;
             top: -1px;
             left: 5px;
@@ -127,28 +146,8 @@ header {
         }
     } 
 
-
-    // Apply these styles after the buttons for DRY
-    #button-support, #button-contact {
-        height: 56px;
-        &::before {
-            font-family: icomoon;
-            padding-right: 6px;
-        }
-    }
-    #button-support {
-        width: 132px;
-        &::before {
-            content: "\e941";
-        }
-    }
-    #button-contact {
-        width: 139px;
-        &::before {
-            content: "\e945";
-        }
-    }
 }
+
 
 // Mobile nav bar
 .main-searchbar-mobile {
