--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -18,11 +18,15 @@
         background-color: darken($background-colour, 10%);
         transition: 0.15s ease-in-out;
     }
-    &::after {
-        @if $has-arrow {
+    @if $has-arrow {
+        padding-bottom: 8px;
+        &::after {
+            position: relative;
+            top: 3px;
             margin-left: 10px;
             font-family: icomoon;
-            font-size: 18px;
+            font-size: 24px;
+            font-weight: 600;
             content: $icon-code-arrow;
         }
     }
