--- a/scss/base/_main.scss
+++ b/scss/base/_main.scss
@@ -136,6 +136,7 @@ main {
             @media (max-width: $screen-large) {
                 gap: 10px;
                 width: 230px;
+                font-size: 18px;
             }
             @media (max-width: $screen-medium) {
                 gap: 15px;
