--- a/scss/utilities/_icons.scss
+++ b/scss/utilities/_icons.scss
@@ -23,57 +23,57 @@ $icon-code-instagram: "\f16d";
 
 // SUBMENU ICON CODES
 $submenu-icons: (
-    "sof1": "\e995",
-    "sof2": "\e9ae",
-    "sof3": "\ea30",
-    "sof4": "\e958",
-    "sof5": "\e930",
+    "sof1": "\f085",
+    "sof2": "\f0b1",
+    "sof3": "\e90c",
+    "sof4": "\e90a",
+    "sof5": "\f07c",
     "sof6": "\ea45",
-    "sof7": "\e95e",
-    "sof8": "\e972",
+    "sof7": "\e9c7",
+    "sof8": "\f0c0",
     "sof9": $icon-code-laptop,
-    "sof10": "\e9c1",
-    "sof11": "\e9c2",
+    "sof10": "\e90d",
+    "sof11": "\e90e",
     "sof12": "\e9ca",
-    "sof13": "\e902",
+    "sof13": "\f2b5",
 
-    "sup1": "\e910",
-    "sup2": "\e9ae",
+    "sup1": "\e90b",
+    "sup2": "\f0b1",
     "sup3": $icon-code-laptop,
-    "sup4": "\e904",
-    "sup5": "\e9c1",
-    "sup6": "\e963", 
+    "sup4": "\e907",
+    "sup5": "\e90d",
+    "sup6": "\e91d", 
     
-    "mar1": "\e986",
-    "mar2": "\e93f",
-    "mar3": "\e99b",
-    "mar4": "\e945",
-    "mar5": "\e972",
-    "mar6": "\e90a",
+    "mar1": "\e911",
+    "mar2": "\e917",
+    "mar3": "\e91b",
+    "mar4": "\f003",
+    "mar5": "\f0c0",
+    "mar6": "\f040",
 
-    "ser1": "\e939",
-    "ser2": "\e942",
-    "ser3": "\e942",
-    "ser4": "\e9a6",
-    "ser5": "\e902",
-    "ser6": "\e958",
+    "ser1": "\e91e",
+    "ser2": "\e913",
+    "ser3": "\e915",
+    "ser4": "\e91c",
+    "ser5": "\f2b5",
+    "ser6": "\e906",
 
-    "des1": "\e90a",
-    "des2": "\e93a",
-    "des3": $icon-code-display,
-    "des4": "\e91a",
-    "des5": "\e958",
-    "des6": "\e9c1",
+    "des1": "\f040",
+    "des2": "\e918",
+    "des3": "\e912",
+    "des4": "\f0a1",
+    "des5": "\e90a",
+    "des6": "\e90d",
 
-    "sec1": "\e92d",
-    "sec2": "\e94e",
+    "sec1": "\f0ea",
+    "sec2": "\e916",
     "sec3": "\e9aa",
-    "sec4": "\e904",
-    "sec5": "\e905",
-    "sec6": "\e98f",
+    "sec4": "\e907",
+    "sec5": "\e904",
+    "sec6": "\e91a",
 
     "cou1": $icon-code-laptop,
     "cou2": $icon-code-code,
-    "cou3": "\e941",
-    "cou4": "\e902"
+    "cou3": "\e919",
+    "cou4": "\f2b5"
 );
